--- a/wtp/values.yaml
+++ b/wtp/values.yaml
@@ -47,13 +47,13 @@ wtpapi:
     - name: ConnectionStrings__Default
       value: "Host=mywtptls-db-svc;Port=5432;Username=postgres;Password=1234;Database=wrddevdb;Include Error Detail=true;"
     - name: App__CorsOrigins
-      value: "https://wtptls-frontend.test.com,http://wtptls-api.test.com,https://mikemine-result.azurewebsites.net,https://mikemine.azurewebsites.net,https://mikemine-dashboard.azurewebsites.net,https://mikeminedev-result-dev.azurewebsites.net,https://mikeminedev-dashboard.azurewebsites.net,https://mikeminedev-dev.azurewebsites.net,https://datamanagement-app.azurewebsites.net,https://waterdss-wrd-dev.eu.mike-cloud-dev.com,https://mike-mine.mike-cloud-dev.com,http://localhost:1338,http://localhost:1337,http://localhost:1339,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://localhost:3000,https://localhost:3001,http://localhost:3002/,https://nile-hp-optimization-dss.westeurope.cloudapp.azure.com,https://mrc-planning-staging.westeurope.cloudapp.azure.com,https://odss.uegcl.go.ug:50004,https://mrc-training-1.westeurope.cloudapp.azure.com,https://mrc-training-2.westeurope.cloudapp.azure.com,https://mrc-training-3.westeurope.cloudapp.azure.com,https://mrc-training-4.westeurope.cloudapp.azure.com,https://waterdss-mrc.azurewebsites.net"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io,http://wtptls-api.127.0.0.1.nip.io,https://mikemine-result.azurewebsites.net,https://mikemine.azurewebsites.net,https://mikemine-dashboard.azurewebsites.net,https://mikeminedev-result-dev.azurewebsites.net,https://mikeminedev-dashboard.azurewebsites.net,https://mikeminedev-dev.azurewebsites.net,https://datamanagement-app.azurewebsites.net,https://waterdss-wrd-dev.eu.mike-cloud-dev.com,https://mike-mine.mike-cloud-dev.com,http://localhost:1338,http://localhost:1337,http://localhost:1339,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://localhost:3000,https://localhost:3001,http://localhost:3002/,https://nile-hp-optimization-dss.westeurope.cloudapp.azure.com,https://mrc-planning-staging.westeurope.cloudapp.azure.com,https://odss.uegcl.go.ug:50004,https://mrc-training-1.westeurope.cloudapp.azure.com,https://mrc-training-2.westeurope.cloudapp.azure.com,https://mrc-training-3.westeurope.cloudapp.azure.com,https://mrc-training-4.westeurope.cloudapp.azure.com,https://waterdss-mrc.azurewebsites.net"
     - name: App__WebUrl
-      value: "https://wtptls-frontend.test.com,"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io,"
     - name: PortalInfo__Container
-      value: "http://wtptls-routerapi.test.com"
+      value: "http://wtptls-routerapi.127.0.0.1.nip.io"
     - name: PortalInfo__Url
-      value: "http://wtptls-routerapi.test.com"
+      value: "http://wtptls-routerapi.127.0.0.1.nip.io"
     - name: Authentication__OpenId__ClientId
       value: "Water Tools"
     - name: Authentication__OpenId__Authority
@@ -61,13 +61,13 @@ wtpapi:
     - name: Authentication__OpenId__Api
       value: "https://api.mike-cloud-dev.com"
     - name: PortalInfo__WorkspaceLandingPage
-      value: "https://wtptls-frontend.test.com/portal/workspaces/{0},https://mike-mine.mike-cloud-dev.comportal/workspaces/{0}"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io/portal/workspaces/{0},https://mike-mine.mike-cloud-dev.comportal/workspaces/{0}"
     - name: PortalInfo__Dissemination__UnsubscribeLink
       value: "/subscriptions/unsubscribe?token={token}"
     - name: PortalInfo__Dissemination__ApprovalLink
       value: "/product/{product_id}/approval"
     - name: Authentication__JwtBearer__Issuer
-      value: "https://wtptls-frontend.test.com,https://mike-mine.mike-cloud-dev.com"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io,https://mike-mine.mike-cloud-dev.com"
     - name: Authentication__JwtBearer__SecurityKey
       value: "WaterDssPortal_C421AAEE0D114E9CA"
     - name: Authentication__JwtBearer__IsEnabled
@@ -83,11 +83,11 @@ wtpapi:
     - name: Token__Key
       value: "Rahasia7xBro?!"
     - name: Token__Issuer
-      value: "https://wtptls-frontend.test.com,https://mike-mine.mike-cloud-dev.com"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io,https://mike-mine.mike-cloud-dev.com"
     - name: Token__Expire
       value: "2"
     - name: Token__Audience
-      value: "https://wtptls-frontend.test.com,https://mike-mine.mike-cloud-dev.com"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io,https://mike-mine.mike-cloud-dev.com"
     - name: Authentication__OpenId__ClientSecret
       value: ""
     - name: DeploymentType
@@ -159,7 +159,7 @@ wtprouterapi:
     - name: ASPNETCORE_ENVIRONMENT
       value: "Production"
     - name: CORS_ORIGINS
-      value: "https://wtptls-frontend.test.com"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io"
     - name: OCELOT_DOWNSTREAM_SCHEME
       value: "http"
     - name: OCELOT_DOWNSTREAM_HOST
@@ -199,11 +199,11 @@ frontend:
     - name: Applications
       value: "mine;mine-result;mine-dashboard;subscriptions;workspaces;datamanagement;waterstatus;planningtools;mine-reco;mine-dama"
     - name: DefaultBaseURL
-      value: "https://wtptls-api.test.com"
+      value: "https://wtptls-api.127.0.0.1.nip.io"
     - name: DefaultBaseURLOld
-      value: "https://wtptls-routerapi.test.com"
+      value: "https://wtptls-routerapi.127.0.0.1.nip.io"
     - name: DefaultBaseURLGateway
-      value: "https://wtptls-routerapi.test.com"
+      value: "https://wtptls-routerapi.127.0.0.1.nip.io"
     - name: DefaultDomainServicesURL
       value: "https://domainservices-wrd-dev.eu.mike-cloud-dev.com"
     - name: DefaultBaseURLPy
@@ -213,11 +213,11 @@ frontend:
     - name: Authority
       value: "https://login.mike-cloud-dev.com"
     - name: ContentDefaultSource
-      value: "wtp-frontend.test.com;domainservices-wrd-dev.eu.mike-cloud-dev.com;api.mapbox.com;nile-hp-optimization-dss.westeurope.cloudapp.azure.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;eramet-dss.azurewebsites.net;flowforecasting.azurewebsites.net;www.youtube.com;datamanagement-app.azurewebsites.net;datamanagement-app.azurewebsites.net;mrc-planning-staging.westeurope.cloudapp.azure.com;odss.uegcl.go.ug;mrc-training-1.westeurope.cloudapp.azure.com;mrc-training-2.westeurope.cloudapp.azure.com;mrc-training-3.westeurope.cloudapp.azure.com;mrc-training-4.westeurope.cloudapp.azure.com"
+      value: "wtp-frontend.127.0.0.1.nip.io;domainservices-wrd-dev.eu.mike-cloud-dev.com;api.mapbox.com;nile-hp-optimization-dss.westeurope.cloudapp.azure.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;eramet-dss.azurewebsites.net;flowforecasting.azurewebsites.net;www.youtube.com;datamanagement-app.azurewebsites.net;datamanagement-app.azurewebsites.net;mrc-planning-staging.westeurope.cloudapp.azure.com;odss.uegcl.go.ug;mrc-training-1.westeurope.cloudapp.azure.com;mrc-training-2.westeurope.cloudapp.azure.com;mrc-training-3.westeurope.cloudapp.azure.com;mrc-training-4.westeurope.cloudapp.azure.com"
     - name: ContentConnectSource
-      value: "login.mike-cloud-dev.com;wtp-api.test.com;wtp-routerapi.test.com;;domainservices-wrd-dev.eu.mike-cloud-dev.com;api.mapbox.com;events.mapbox.com;mrc-waterstatus-api.azurewebsites.net;wrd-geoserver-dev.azurewebsites.net;ipv4.icanhazip.com;mrc-waterstatus-api-dev.azurewebsites.net;dhigroup.matomo.cloud;odss.uegcl.go.ug; data:"
+      value: "login.mike-cloud-dev.com;wtp-api.127.0.0.1.nip.io;wtp-routerapi.127.0.0.1.nip.io;;domainservices-wrd-dev.eu.mike-cloud-dev.com;api.mapbox.com;events.mapbox.com;mrc-waterstatus-api.azurewebsites.net;wrd-geoserver-dev.azurewebsites.net;ipv4.icanhazip.com;mrc-waterstatus-api-dev.azurewebsites.net;dhigroup.matomo.cloud;odss.uegcl.go.ug; data:"
     - name: ContentImageSource
-      value: "wtp-api.test.com;wtp-routerapi.test.com;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
+      value: "wtp-api.127.0.0.1.nip.io;wtp-routerapi.127.0.0.1.nip.io;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
     - name: ContentScriptSource
       value: "www.youtube.com;unpkg.com;api.mapbox.com;dhigroup.matomo.cloud "
     - name: ContentStyleSource
@@ -227,7 +227,7 @@ frontend:
     - name: UseContentSecurityHeader
       value: "False"
     - name: ContentFrameAncestors
-      value: "https://wtptls-frontend.test.com"
+      value: "https://wtptls-frontend.127.0.0.1.nip.io"
   autoscaling:
     enabled: false
     minReplicas: 1
@@ -296,7 +296,7 @@ dsapi:
     - name: Swagger__DocumentDescription
       value: "SwaggerInfo.md"
     - name: CORS
-      value: "localhost;wtptls-frontend.test.com;mike-mine.mike-cloud-dev.com"
+      value: "localhost;wtptls-frontend.127.0.0.1.nip.io;mike-mine.mike-cloud-dev.com"
   service:
       type: ClusterIP
       port: 80
@@ -329,7 +329,7 @@ pyapi:
 geoserver:
   replicaCount: 1
   image:
-    repository: kartoza/geoserver
+    repository: docker.io/kartoza/geoserver
     pullPolicy: IfNotPresent
     tag: "2.25.0"
   envs:
@@ -342,7 +342,7 @@ geoserver:
     - name: GEOSERVER_DATA_DIR
       value: "/opt/geoserver/data_dir"
     - name: HTTP_PROXY_NAME
-      value: "wtptls-geoserver.test.com"
+      value: "wtptls-geoserver.127.0.0.1.nip.io"
     - name: HTTP_SCHEME
       value: "https"
     - name: SSL
@@ -376,70 +376,70 @@ geoserver:
 
 ingress:
   enabled: true
-  className: ""
+  className: "nginx"
   annotations: 
     # nginx.ingress.kubernetes.io/add-header: "Content-Security-Policy: default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com;"
     # cert-manager.io/cluster-issuer: "selfsigned-issuer"
-    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    cert-manager.io/issuer: "letsencrypt-staging"
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: 'true'
     nginx.ingress.kubernetes.io/proxy-body-size: 5m
     # nginx.ingress.kubernetes.io/ssl-redirect: "true"
     # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /    
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: wtptls-api.test.com
+    - host: wtptls-api.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
           service:
             name: mywtptls-api-svc
             port: 80
-    - host: wtptls-routerapi.test.com
+    - host: wtptls-routerapi.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
           service:
             name: mywtptls-routerapi-svc
             port: 80            
-    - host: wtptls-frontend.test.com
+    - host: wtptls-frontend.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
           service:
             name: mywtptls-frontend-svc
             port: 80      
-    - host: wtptls-db.test.com
+    - host: wtptls-db.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
           service:
             name: mywtptls-db-svc
             port: 5432                 
-    - host: wtptls-dsdb.test.com
+    - host: wtptls-dsdb.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
           service:
             name: mywtptls-dsapidb-svc
             port: 5432
-    - host: wtptls-dsapi.test.com
+    - host: wtptls-dsapi.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
           service:
             name: mywtptls-dsapi-svc
             port: 80         
-    - host: wtptls-pyapi.test.com
+    - host: wtptls-pyapi.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
           service:
             name: mywtptls-pyapi-svc
             port: 80          
-    - host: wtptls-geoserver.test.com
+    - host: wtptls-geoserver.127.0.0.1.nip.io
       paths:
         - path: /
           pathType: Prefix
@@ -447,11 +447,12 @@ ingress:
             name: mywtptls-geoserver-svc
             port: 80                   
   tls: #[]
-   - secretName: mywtptls-tls
+  #  - secretName: mywtptls-tls
+   - secretName: letsencrypt-staging-tls
      hosts:
-      - wtptls-frontend.test.com
-      - wtptls-api.test.com
-      - "*.test.com"
+      - wtptls-frontend.127.0.0.1.nip.io
+      - wtptls-api.127.0.0.1.nip.io
+      - "*.nip.io"
 
 cert-manager: #defined by either the name or alias of your dependency in Chart.yaml
   enabled: true
