--- a/wtp/templates/dsapidb/postgres-pv.yaml
+++ b/wtp/templates/dsapidb/postgres-pv.yaml
@@ -14,6 +14,6 @@ spec:
   capacity:
     storage: 10Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   hostPath:
-    path: "/mnt/data"
+    path: "/water-status-data"
