--- a/wtp/templates/dsapidb/postgres-pv-claim.yaml
+++ b/wtp/templates/dsapidb/postgres-pv-claim.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   storageClassName: manual
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
