--- a/wtp/templates/geoserver/geoserver-pv-claim.yaml
+++ b/wtp/templates/geoserver/geoserver-pv-claim.yaml
@@ -14,5 +14,5 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  # volumeName: {{ include "wtp.name" . }}-geoserver-pv
+  volumeName: {{ include "wtp.name" . }}-geoserver-pv
   storageClassName: manual
